--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^2.0.7",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "cheerio": "^1.0.0-rc.12",
     "g-sheets-api": "^2.1.3",
