--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "portofolio-page",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-netlify": "^2.0.7",
-    "@sveltejs/vite-plugin-svelte": "^2.0.3",
-    "cheerio": "^1.0.0-rc.12",
-    "g-sheets-api": "^2.1.3",
-    "svelte": "^3.57.0",
-    "vite": "^4.3.2",
-    "vite-plugin-svelte-inspector": "^0.2.1"
-  }
+	"name": "portofolio-page",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "prettier --plugin-search-dir . --check .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"vite": "^4.3.0"
+	},
+	"type": "module"
 }
